# rusk

./: .cursorrules  .gitignore  ARCHITECTURE.md  Cargo.toml  EDITOR.md  README.md
completions/: README.md  rusk.bash  rusk.fish  rusk.nu  rusk.ps1  rusk.zsh
src/: app.rs  args.rs  cli.rs  completions.rs  db.rs  display.rs  error.rs  lib.rs  main.rs  misc.rs  model.rs  storage.rs  task.rs  windows_console.rs
src/cli/: dialogs.rs  editor.rs  formatter.rs  handlers.rs  mod.rs
src/cli/editor/: clipboard.rs  draft.rs  history.rs  input.rs  mod.rs  mouse.rs  state.rs  terminal.rs  text_ops.rs  view.rs
src/parser/: date.rs  ids.rs  mod.rs
tests/: README.md  cli_tests.rs  cli_utils_tests.rs  completion_tests.rs  completions.rs  completions_install_tests.rs  database_corruption_tests.rs  directory_structure_tests.rs  edge_case_tests.rs  edit_mode_tests.rs  edit_parsing_tests.rs  environment_tests.rs  integration_main_tests.rs  lib_tests.rs  mark_success_tests.rs  parse_flexible_ids_tests.rs  path_migration_tests.rs  persistence_tests.rs  restore_tests.rs  unchanged_detection_tests.rs
tests/common/: mod.rs
tests/completions/: .gitkeep  README.md  run_all.sh
tests/completions/bash/: helpers.sh  run_all.sh  test_all_commands.sh  test_basic.sh  test_edit_after_id.sh
tests/completions/fish/: run_all.fish  test_all_commands.fish  test_basic.fish  test_edit_after_id.fish
tests/completions/nu/: run_all.nu  test_all_commands.nu  test_basic.nu  test_edit_after_id.nu
tests/completions/powershell/: README.md  helpers.ps1  run_all.ps1  test_all_commands.ps1  test_basic_completion.ps1  test_edit_after_id.ps1
tests/completions/rust/: completion_tests.rs  completions_install_tests.rs  mod.rs  nu_completion_tests.rs
tests/completions/zsh/: helpers.zsh  run_all.sh  test_all_commands.zsh  test_basic.zsh  test_edit_after_id.zsh
