[package]
name = "rusk"
version = "0.1.1"
authors = ["github.com/tagirov"]
edition = "2024"
description = "A minimal CLI todo manager"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6.0"
