[package]
name = "rusk"
version = "0.5.0"
authors = ["github.com/tagirov/rusk/graphs/contributors"]
edition = "2024"
description = "A minimal terminal task manager"

[lib]
name = "rusk"
path = "src/lib.rs"

[[bin]]
name = "rusk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.0"
