[package]
name = "rusk"
version = "0.6.12"
authors = ["github.com/tagirov/rusk/graphs/contributors"]
edition = "2024"
description = "Minimal cross-platform terminal task manager"

[lib]
name = "rusk"
path = "src/lib.rs"

[[bin]]
name = "rusk"
path = "src/main.rs"

[features]
default = ["completions", "interactive"]
completions = ["dep:dirs"]
interactive = ["dep:crossterm", "dep:arboard"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = { version = "6.0", optional = true }
crossterm = { version = "0.29", optional = true }
arboard = { version = "3.4", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3.0"
